The roll command now uses standard dice-rolling syntax (e.g. 3d4+7)
A unit test framework has been added with some initial tests implemented.

--- a/odin/Odin.vcproj
+++ b/odin/Odin.vcproj
@@ -157,6 +157,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\filter.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\lexer.hpp"
 				>
 			</File>
