--- a/trunk/odin/Odin.vcproj
+++ b/trunk/odin/Odin.vcproj
@@ -157,6 +157,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\filter.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\lexer.hpp"
 				>
 			</File>
