--- a/test/test.vcproj
+++ b/test/test.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;.."
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_SCL_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_SCL_SECURE_NO_WARNINGS;_WIN32_WINNT=0x0501"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -118,7 +118,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories=".;.."
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_SCL_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_SCL_SECURE_NO_WARNINGS;_WIN32_WINNT=0x0501"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -200,6 +200,10 @@
 				RelativePath=".\small_buffer_test.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\telnet_stream_fixture.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -219,6 +223,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\fake_datastream.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\initiated_negotiation_test.hpp"
 				>
 			</File>
@@ -228,6 +236,10 @@
 			</File>
 			<File
 				RelativePath=".\small_buffer_test.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet_stream_fixture.hpp"
 				>
 			</File>
 		</Filter>
