r6 made dice_roll_parser.cpp compile on Ubuntu.  Sorry about the check-in comment.  This addresses the who list appearing inappropriately, the #SERVER messages appearing inappropriately, and fixes Sayto.  It also contains the first part of an implementation of the Telnet protocol, though this isn't hooked in yet.

--- a/odin/Odin.vcproj
+++ b/odin/Odin.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\telnet\filter.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\telnet\initiated_negotiation.hpp"
 				>
 			</File>
@@ -272,6 +276,10 @@
 			</File>
 			<File
 				RelativePath=".\telnet\completed_negotiation.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet\filter.cpp"
 				>
 			</File>
 			<File
