--- a/trunk/odin/Odin.vcproj
+++ b/trunk/odin/Odin.vcproj
@@ -185,10 +185,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\targetver.h"
-				>
-			</File>
-			<File
 				RelativePath=".\tokenise.hpp"
 				>
 			</File>
@@ -247,15 +243,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\telnet\option.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\option_router.hpp"
-				>
-			</File>
-			<File
 				RelativePath=".\telnet\protocol.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet\router.hpp"
 				>
 			</File>
 			<File
@@ -287,7 +279,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\telnet\option_router.cpp"
+				RelativePath=".\telnet\router.cpp"
 				>
 			</File>
 			<File
@@ -303,47 +295,7 @@
 			Name="Telnet Option Header Files"
 			>
 			<File
-				RelativePath=".\telnet\options\echo_client.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\echo_server.hpp"
-				>
-			</File>
-			<File
 				RelativePath=".\telnet\options\naws_client.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\naws_server.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\subnegotiationless_client.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\subnegotiationless_server.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\suppress_goahead_client.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\suppress_goahead_server.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\terminal_type_client.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\terminal_type_server.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\transmit_binary_client.hpp"
 				>
 			</File>
 		</Filter>
@@ -352,22 +304,6 @@
 			>
 			<File
 				RelativePath=".\telnet\options\naws_client.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\naws_server.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\terminal_type_client.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\terminal_type_server.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\telnet\options\transmit_binary_server.hpp"
 				>
 			</File>
 		</Filter>
