Who list now has columns and pages, depending on client screen width.  Experimental implementation of keepalive that sends a telnet NOP to every client every thirty seconds.

--- a/paradice/Paradice.vcproj
+++ b/paradice/Paradice.vcproj
@@ -179,6 +179,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\utility.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\who.cpp"
 				>
 			</File>
@@ -214,6 +218,10 @@
 			</File>
 			<File
 				RelativePath=".\socket.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\utility.hpp"
 				>
 			</File>
 			<File
