--- a/trunk/paradice/Paradice.vcproj
+++ b/trunk/paradice/Paradice.vcproj
@@ -197,6 +197,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\command.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\communication.hpp"
 				>
 			</File>
