Mostly a rearrangement of the source.  The driver module has been given an interface to implement that carries the game context around, which makes it mock/fakeable and thus testable.  Similarly, a lot of the code has been moved out of the driver module and into the main game library for the same reason.

--- a/odin/Odin.vcproj
+++ b/odin/Odin.vcproj
@@ -295,7 +295,31 @@
 			Name="Telnet Option Header Files"
 			>
 			<File
+				RelativePath=".\telnet\options\echo_client.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet\options\echo_server.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\telnet\options\naws_client.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet\options\subnegotiationless_client.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet\options\subnegotiationless_server.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet\options\suppress_goahead_client.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\telnet\options\suppress_goahead_server.hpp"
 				>
 			</File>
 		</Filter>
