--- a/test/test.vcproj
+++ b/test/test.vcproj
@@ -189,11 +189,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\munin_ansi_graphics_context_fixture.cpp"
+				RelativePath=".\munin_ansi_canvas_fixture.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\munin_ansi_window_fixture.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\munin_canvas_fixture.cpp"
 				>
 			</File>
 			<File
@@ -202,10 +206,6 @@
 			</File>
 			<File
 				RelativePath=".\munin_container_fixture.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\munin_graphics_context_fixture.cpp"
 				>
 			</File>
 			<File
@@ -311,15 +311,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\fake_munin_canvas.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\fake_munin_component.hpp"
 				>
 			</File>
 			<File
 				RelativePath=".\fake_munin_container.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\fake_munin_graphics_context.hpp"
 				>
 			</File>
 			<File
@@ -331,11 +331,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\munin_ansi_graphics_context_fixture.hpp"
+				RelativePath=".\munin_ansi_canvas_fixture.hpp"
 				>
 			</File>
 			<File
 				RelativePath=".\munin_ansi_window_fixture.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\munin_canvas_fixture.hpp"
 				>
 			</File>
 			<File
@@ -344,10 +348,6 @@
 			</File>
 			<File
 				RelativePath=".\munin_container_fixture.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\munin_graphics_context_fixture.hpp"
 				>
 			</File>
 			<File
@@ -364,10 +364,6 @@
 			</File>
 			<File
 				RelativePath=".\small_buffer_fixture.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\small_buffer_test.hpp"
 				>
 			</File>
 			<File
