--- a/test/test.vcproj
+++ b/test/test.vcproj
@@ -185,6 +185,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\hugin_frame_fixture.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\hugin_text_area_fixture.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\munin_algorithm_fixture.cpp"
 				>
 			</File>
@@ -324,6 +332,14 @@
 			</File>
 			<File
 				RelativePath=".\fake_munin_layout.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\hugin_frame_fixture.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\hugin_text_area_fixture.hpp"
 				>
 			</File>
 			<File
